# BevyRoguelikeTutorial

./: .gitignore  .gitmodules  Cargo.toml  README.md  index.html
.github/workflows/: release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
assets/config/: player.seat.ron  wall.tile.ron
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: lib.rs
src/: audio.rs  global.rs  lib.rs  loading.rs  main.rs  menu.rs  physics.rs
src/components/: mod.rs
src/enviroments/: mod.rs  tile.rs  wall.rs
src/helper/: camera.rs  ldtk.rs  mod.rs
src/loading/: data.rs  mod.rs  ron_config.rs
src/player/: audio.rs  control.rs  mod.rs
