[package]
name = "bevy_roguelike_tutorial"
version = "0.1.0"
publish = false
authors = ["jaynnn"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile", "crates/*"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy_kira_audio = { version = "0.19" }
bevy_asset_loader = { version = "0.20" }
rand = "0.8.3"
leafwing-input-manager = "0.13.3"
bevy_ecs_tilemap = {path = "crates/bevy_ecs_tilemap"}
thiserror = "1.0.58"
ldtk_rust = "0.6.0"
serde = "1.0.197"
serde_json = "1.0.115"
log = "0.4.21"
bevy_rapier2d = "0.25.0"
webbrowser = { version = "0.8", features = ["hardened"] }
bevy_common_assets = { version = "0.10.0", features = ["ron"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29", default-features = false }
image = { version = "0.25.0", default-features = false }
bevy-inspector-egui = "0.23.4"

[build-dependencies]
embed-resource = "2.4.2"
